# HAFiscal-QE

./: ._relpath-to-latexroot.ltx  ._todos-202510022_1004h.md  .cursorignore  .dockerignore  .gitattributes  .gitignore  .latexmkrc  .venv  .zenodo.json  00-README.md  CITATION.cff  Dockerfile  FINAL-APPROACH.md  HAFiscal-Abstract.txt  HAFiscal-QE.tex  HAFiscal.bbl  HAFiscal.dep  HAFiscal.tex  README-QE.md  README-pdf-is-markdown-pdf-compiled-version-of-README.md  README-pdf-is-same-as-README.md  README.md  ROADMAP.md  STATUS-REPORT.md  Subfiles.ltx  build-docker.sh  pyproject.toml  qe.bst  reproduce.py  reproduce.sh
.claude/: settings.local.json
.devcontainer_no-dashboard/: benchmark.sh  detect-arch.sh  devcontainer.json  find_latex_packages.sh  fix-latex-compatibility.sh  fix_scripts.sh  run-setup.sh  setup.sh
@local/: ._relpath-to-latexroot.ltx  @local-is-for-project-specific-config-files.md  _containername.ltx  _inputpaths.ltx  _projectname.ltx  acknowledgments.texinput  config.ltx  fix-qe-font-content-problem.tex  hiddenappendix.sty  in-draftmode-show-ref-labels.sty  local-qe-figs-and-tables.sty  local-qe.sty  local.sty  metadata-qe.ltx  metadata.ltx  metadata.tex  qe-dir-add-to-search-path.sty  qe-fix-line-number-alignment-in-draft-mode.sty
@resources/: project-metadata.ltx  subfile-setup.ltx  tex-add-search-paths.tex  tex-paths.ltx
Code/: README.md
Data/: README.md
Equations/: README.md  splurge.tex
Figures/: ._relpath-to-latexroot.ltx  .latexmkrc  HAFiscal.bib  HANK_IRFs.tex  HANK_multipliers.tex  LorenzPts.tex  LorenzPtsSplZero.tex  LorenzPts_robustness_CRRA.tex  LorenzPts_robustness_R.tex  Policyrelrecession.tex  cumulativemultipliers_SplurgeComp.tex  splurge0_Norwayestimation.tex  splurge_estimation.tex  untargetedMoments.tex  untargetedMoments_wSplZero.tex
HAFiscal_variants/: README.md
README/: CONTRIBUTING-PRIVATE.md  DOCKER-PRIVATE.md  DOCKER.md  GETTING-STARTED.md  INSTALLATION.md  QUICK-REFERENCE.md  REPLICATION-PRIVATE.md  REPLICATION.md  TROUBLESHOOTING.md  provenance.md
Subfiles/: ._relpath-to-latexroot.ltx  Appendix-HANK.tex  Appendix-NoSplurge.tex  Appendix-Robustness.tex  Comparing-policies.tex  Conclusion.tex  HAFiscal-titlepage.tex  HAFiscal.bib  HANK.tex  Intro.bbl  Intro.tex  Model.tex  (+2 more)
(+312 files in other folders)
